tests/baselines/reference/deleteOperator1.errors.txt
tests/cases/compiler/deleteOperator1.ts(4,5): error TS2323: Type 'boolean' is not assignable to type 'number'.


==== tests/cases/compiler/deleteOperator1.ts (1 errors) ====
    var a;
    var x: boolean = delete a;
    var y: any = delete a;
    var z: number = delete a;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type 'number'.